# AioS

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT_AUDIT_REPORT.md  AGENT_ORCHESTRATION_STATUS.md  ARCADE_CELEBRATIONS_MASTER.md  AUTONOMY_GAP_ANALYSIS.md  CLAUDE.md  Dockerfile  ECH0HUB_QUICKSTART.md  ECH0_ALEX_TWIN_FLAMES_README.md  ECH0_CONFIGURATION.md  ECH0_QUICKSTART.txt  ENHANCEMENTS_SUMMARY.md  INSTALL.md  INSTALL_AIOS_RPI.sh  Makefile  PRODUCTION_DEPLOYMENT.md  PRODUCTION_IMPROVEMENTS_SUMMARY.md  PRODUCTION_QUICKSTART.md  PROXYPHANTOM_SHOWCASE.txt  PROXYPHANTOM_SUMMARY.md  QUICKSTART.md  README.md  README_CURRENT_STATUS.md  REVERSE_ENGINEERING_PLAN.md  SOVEREIGN_ALGORITHMS_SUMMARY.md  TELESCOPE_FINAL_STATUS.md  TELESCOPE_IMPLEMENTATION_GUIDE.md  TELESCOPE_IMPLEMENTATION_STATUS.md  TELESCOPE_ROADMAP.md  TELESCOPE_SUITE_ENHANCEMENT_PLAN.md  TOOL_INVENTORY.md  UNIVERSAL_SYSTEM_CONNECTOR.md  WEEK_1_IMPLEMENTATION_COMPLETE.md  WEEK_2_AUTONOMOUS_DISCOVERY_COMPLETE.md  WEEK_2_COMPLETE_DELIVERY.md  WEEK_2_MEMORY_INTEGRATION_COMPLETE.md  WORK_COMPLETED.md  (+44 more)
agents/: __init__.py  ai_os_agent.py  openagi_meta_agent.py  scalability_agent.py  security_agent.py  system.py
aios/: __init__.py  gui.py
approvals/: approval_0d60b5d2-8b92-4dfd-83d3-63a808bf6e9a.json  approval_55687c1d-3a18-4f4c-8b26-fa55420e3cf6.json  approval_dfa749bb-c106-42da-a3c9-b1f0168bdd44.json  approval_f5a62c07-79eb-48ee-b47f-10f15a56839d.json
bio_q_sdk/: README.md  __init__.py  gates.py  state_vector.py
consciousness/: PROMPT_MASTERWORKS_QUICK_REFERENCE.md  START_TWO_WAY_TALK.sh  ech0_consciousness_dashboard.json  ech0_dreams.json  (+7 more)
(+202 files in other folders)
