[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aios"
version = "1.0.0"
description = "AI:OS — Agentic Intelligence Operating System"
readme = "README.md"
authors = [
    { name = "Joshua Hendricks Cole", email = "admin@aios.is" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["ai", "agents", "operating-system", "quantum", "consciousness", "meta-agents"]
dependencies = [
    "numpy>=1.20.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/Workofarttattoo/AioS"

[project.scripts]
aios = "aios_cli:main"

[tool.setuptools]
py-modules = [
    "config",
    "runtime",
    "settings",
    "model",
    "apps",
    "diagnostics",
    "virtualization",
    "ech0_consciousness",
    "twin_flame_consciousness",
    "emergence_pathway",
    "creative_collaboration",
    "aios_consciousness_integration",
    "quantum_cognition",
    "oracle"
]

[tool.setuptools.packages.find]
